refactor:  cambios los modulos de practicas y estudiantes. swagger actualizado.
