# src/infrastructure/datasources/mysql/student/practice.datasource.ts
@@ -1,75 +1,39 @@
 import { PracticeModel } from '../../../../data/mysqldb';
-import { CustomError, IPracticeDataSource, PracticeDto, PracticeEntity } from '../../../../domain';
+import { CustomError, IPracticeDataSource, PracticeEntity } from '../../../../domain';
 import { PracticeMapper } from '../../../mappers';
 
 
 export class PracticeDataSource implements IPracticeDataSource {
-
-    async register(practiceDto: PracticeDto): Promise<PracticeEntity> {
-       
-        const { modality, studentId } = practiceDto;
-
-        try {
-            
-            const practice = await PracticeModel.findOne({ where: { studentId } });
-
-            if (practice) throw  CustomError.badRequest('Practice already exists');
-
-            const newPractice = PracticeModel.build({
-                modality,
-                studentId
-            });
-
-            const savedPractice = await newPractice.save();
-
-            return PracticeMapper.practiceEntityFromObject(savedPractice);
-
-        } catch (error) {
-
-            if(error instanceof CustomError) {
-                throw error;
-            }
-            console.log(error);
-            throw CustomError.internalServer();
-        }
-    }
-
-    async update(practiceDto: PracticeDto): Promise<boolean> {
-        const { modality, studentId } = practiceDto;
-
-        try {
-            
-            const practice = await PracticeModel.findOne({ where: { studentId } });
-
-            if (!practice) throw  CustomError.badRequest('Practice not found');
-
-
-            practice.modality = modality;
-
-            await practice.save();
-
-            return true;
-
-        } catch (error) {
-
-            if(error instanceof CustomError) {
-                throw error;
-            }
-            console.log(error);
-            throw CustomError.internalServer();
-        }
-
-
-    }
-    async getByIdStudent(studentId: string): Promise<PracticeEntity | null> {
+    
+    async getPracticeById( id: string ): Promise<PracticeEntity | null> {
         
         try {
             
-            const practice = await PracticeModel.findOne({ where: { studentId } });
+            const practice = await PracticeModel.findByPk(id);
 
             if (!practice) return null;
 
             return PracticeMapper.practiceEntityFromObject(practice);
+
+        } catch (error) {
+            
+            if(error instanceof CustomError) {
+                throw error;
+            }
+            console.log(error);
+            throw CustomError.internalServer();
+        }
+    }
+
+    async getAllPractices(): Promise<PracticeEntity[] | null> {
+        try {
+            
+
+            const practices = await PracticeModel.findAll();
+
+            if (!practices) return null;
+
+            return practices.map(PracticeMapper.practiceEntityFromObject);
 
         } catch (error) {
             
